--- a/src/client/static/components/input.tmpl.njk
+++ b/src/client/static/components/input.tmpl.njk
@@ -1,33 +1,29 @@
-{% macro input(name = '', type = 'text', label = '', placeholder = '', iconTemplate = '', withPaddingTop = false) %}
-    {% set inputPaddingTopClass = '' %}
+{% set inputPaddingTopClass = '' %}
 
-    {% if withPaddingTop %}
-        {% set inputPaddingTopClass = 'input-b_default-pd_top' %}
-    {% endif %}
+{% if withPaddingTop %}
+    {% set inputPaddingTopClass = 'input-b_default-pd_top' %}
+{% endif %}
 
-    <div class="input-b {{inputPaddingTopClass}}">
-        <label class="input-b__label">
-            <span class="input-b__span">{{label}}</span>
+<div class="input-b {{inputPaddingTopClass}}">
+    <label class="input-b__label">
+        <span class="input-b__span">{{label}}</span>
 
-            <div class="input-b__line">
-                <input type="{{type}}" name="{{name}}" class="input-b__input" placeholder="{{placeholder}}" formcontrol>
+        <div class="input-b__line">
+            <input type="{{type}}" name="{{name}}" class="input-b__input" placeholder="{{placeholder}}" formcontrol="formcontrol">
 
-                {% if iconTemplate %}
-                    <div class="input-b__icon">
-                        {% include iconTemplate %}
-                    </div>
-                {% endif %}
+            {% if iconTemplate %}
+                <div class="input-b__icon">
+                    {% include iconTemplate %}
+                </div>
+            {% endif %}
 
-                <div class="input-b__indicator"></div>
+            <div class="input-b__indicator"></div>
 
-                <span class="input-b__error">
-                    <ng-container data-componentsids="{{errorsComponentId}}"></ng-container>
-                </span>
-            </div>
+            <span class="input-b__error">
+                <ng-container data-componentsids="{{errorsComponentId}}"></ng-container>
+            </span>
+        </div>
 
-        </label>
+    </label>
 
-    </div>
-{% endmacro %}
-
-{{input(name, type, label, placeholder, iconTemplate, withPaddingTop)}}
+</div>
