--- a/src/client/static/pages/messanger.tmpl.njk
+++ b/src/client/static/pages/messanger.tmpl.njk
@@ -24,7 +24,7 @@
             </button>
         </header>
 
-        <div class="messager__chat-main">
+        <div class="messanger__chat-main">
             <ng-container data-componentsids="{{messagesComponentId}}"></ng-container>
         </div>
 
