--- a/src/client/static/components/avatar.tmpl.njk
+++ b/src/client/static/components/avatar.tmpl.njk
@@ -5,7 +5,7 @@
     {% if canChangeAvatar %}
         <button class="avatar__change-btn btn-icon" onClick="upload">
             <div class="avatar__icon">
-                {% include 'icons/photo.tmpl.njk' %}
+                {% include 'static/icons/photo.tmpl.njk' %}
             </div>
         </button>
     {% endif %}
