--- a/src/client/static/components/search.tmpl.njk
+++ b/src/client/static/components/search.tmpl.njk
@@ -3,7 +3,7 @@
         <label class="search__label">
             <input name="search" type="text" class="search__input" placeholder=" ">
             <div class="search__placeholder">
-                {% include 'icons/search.tmpl.njk' %}
+                {% include 'static/icons/search.tmpl.njk' %}
                 <span class="search__span">Search</span>
             </div>
         </label>
