--- a/src/client/static/pages/login.tmpl.njk
+++ b/src/client/static/pages/login.tmpl.njk
@@ -14,7 +14,7 @@
 
                 <div class="auth-b__sign-up-link">
                     <span>Or</span>
-                    <a class="link" href="/static/sign-up.html">Sign Up</a>
+                    <a class="link" href="/sign-up">Sign Up</a>
                 </div>
             </div>
         </div>
