--- a/src/client/static/pages/messanger.tmpl.njk
+++ b/src/client/static/pages/messanger.tmpl.njk
@@ -3,7 +3,7 @@
         <header class="messanger__left-header">
             <button class="btn-icon messanger__profile-btn" onclick="goToSettings">
                 <span class="messanger__profile-btn-span">Profile</span>
-                {% include 'icons/keyboard-arrow-right.tmpl.njk' %}
+                {% include 'static/icons/keyboard-arrow-right.tmpl.njk' %}
             </button>
 
             <div class="messanger__search">
@@ -20,7 +20,7 @@
             </div>
 
             <button class="messanger__chat-action-btn btn-icon">
-                {% include 'icons/more-settings.tmpl.njk' %}
+                {% include 'static/icons/more-settings.tmpl.njk' %}
             </button>
         </header>
 
@@ -30,14 +30,14 @@
 
         <footer class="messanger__chat-footer">
             <button class="btn-icon messanger__chat-footer-attach-btn">
-                {% include 'icons/attach.tmpl.njk' %}
+                {% include 'static/icons/attach.tmpl.njk' %}
             </button>
 
             <input type="text" class="messanger__chat-input" placeholder="Message">
 
             <button class="btn-icon messanger__chat-footer-send-btn">
                 <div class="badge">
-                    {% include 'icons/send.tmpl.njk' %}
+                    {% include 'static/icons/send.tmpl.njk' %}
                 </div>
             </button>
         </footer>
