--- a/src/client/static/pages/sign-up-step-two.tmpl.njk
+++ b/src/client/static/pages/sign-up-step-two.tmpl.njk
@@ -10,7 +10,7 @@
 
                 <div class="auth-b__sign-up-link">
                     <span>Or</span>
-                    <a class="link" href="/static/login.html">Login</a>
+                    <a class="link" href="/login">Login</a>
                 </div>
             </div>
         </div>
