--- a/src/client/app/components/button/btn.tmpl.njk
+++ b/src/client/app/components/button/btn.tmpl.njk
@@ -1,1 +1,1 @@
-<button class="btn btn_size_normal" type="{{type}}">{{text}}</button>
+<button class="btn btn_size_normal" type="{{type}}" onclick="click">{{text}}</button>
