--- a/src/client/app/components/chat/chat.tmpl.njk
+++ b/src/client/app/components/chat/chat.tmpl.njk
@@ -3,7 +3,7 @@
         <ng-container data-componentsids="{{avatarComponentId}}"></ng-container>
     </div>
     <div class="chat-list__item-text-wrapper">
-        <p class="chat-list__item-name">{{chat.name}}</p>
+        <p class="chat-list__item-name">{{chat.title}}</p>
         <p class="chat-list__item-text">{{chat.text}}</p>
     </div>
     <div class="chat-list__item-extra-info">
