--- a/src/client/app/pages/settings/settings.tmpl.njk
+++ b/src/client/app/pages/settings/settings.tmpl.njk
@@ -18,6 +18,10 @@
                 <div class="settings__settings-list">
                     {{settingsList(renderingSettingsList)}}
                 </div>
+
+                <div class="settings__logout-wrapper">
+                    <button class="settings__logout-btn" onClick="logout">Logout</button>
+                </div>
             {% endif %}
 
             {% if isEditInformationBlock %}
