--- a/src/client/assets/styles/avatar.scss
+++ b/src/client/assets/styles/avatar.scss
@@ -31,4 +31,11 @@
 
         transition: height 0.15s linear;
     }
+
+    &__empty {
+        width: 100%;
+        height: 100%;
+        
+        background-color: rgba(66, 66, 66, 0.1);
+    }
 }
