--- a/src/client/assets/styles/messanger/messanger.scss
+++ b/src/client/assets/styles/messanger/messanger.scss
@@ -129,4 +129,14 @@ body {
             color: var(--color-primary);
         }
     }
+
+    &__chat-menu {
+        box-shadow      : 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        background-color: white;
+        position        : absolute;
+        display         : block !important;
+        width           : 200px;
+        right           : 20px;
+        top             : 60px;
+    }
 }
