В проект была добавлена возможность удаления чата, удаления / добавления пользователей в чат

--- a/src/client/assets/styles/create-chat.scss
+++ b/src/client/assets/styles/create-chat.scss
@@ -16,6 +16,12 @@
         background-color: var(--settings-divider-color);
     }
 
+    &__divider-hidden {
+        visibility: hidden;
+        
+        margin-bottom: 64px;
+    }
+
     &__create-btn {
         margin-top: 24px;
     }
