--- a/src/client/app/components/chat-management/chat-management.tmpl.njk
+++ b/src/client/app/components/chat-management/chat-management.tmpl.njk
@@ -1,7 +1,10 @@
 <div class="create-chat">
-    <ng-container data-componentsids="{{chatNameId}}"></ng-container>
+    {% if canChangeName %}
+        <ng-container data-componentsids="{{chatNameId}}"></ng-container>
 
-    <div class="create-chat__divider"></div>
+        <div class="create-chat__divider"></div>
+        <div class="create-chat__divider-hidden"></div>
+    {% endif %}
 
     <ng-container data-componentsids="{{editChatUsersId}}"></ng-container>
 
