--- a/src/client/assets/styles/messanger/messanger.scss
+++ b/src/client/assets/styles/messanger/messanger.scss
@@ -139,4 +139,9 @@ body {
         right           : 20px;
         top             : 60px;
     }
+
+    &__chat-action-btn {
+        width: 30px;
+        justify-content: center;
+    }
 }
