--- a/src/client/app/pages/login/login.tmpl.njk
+++ b/src/client/app/pages/login/login.tmpl.njk
@@ -6,15 +6,11 @@
 
                 <div class="auth-b__form">
                     <ng-container data-componentsids="{{loginFormId}}"></ng-container>
-
-                    {# <div class="auth-b__forgot">
-                        <a class="link" href="https://google.com">Forgot password?</a>
-                    </div> #}
                 </div>
 
                 <div class="auth-b__sign-up-link">
                     <span>Or</span>
-                    <a class="link" href="/sign-up">Sign Up</a>
+                    <a class="link" href="/sign-up" onClick="goToSignUpPage">Sign Up</a>
                 </div>
             </div>
         </div>
