Правки по замечаниям

--- a/src/client/app/pages/messanger/messanger.tmpl.njk
+++ b/src/client/app/pages/messanger/messanger.tmpl.njk
@@ -14,10 +14,9 @@
                 <ng-container data-componentsids="{{searchComponentId}}"></ng-container>
             </div>
         </header>
+        
+        <ng-container data-componentsids="{{createChatBtnCopmonentId}}"></ng-container>
 
-        <div class="create-chat" onclick="createChat">
-            Create chat
-        </div>
         <ng-container data-componentsids="{{chatsCopmonentId}}"></ng-container>
     </aside>
     <main class="messanger__chat">
