Изменения в структуре проекта

--- a/src/client/app/components/chat-management/chat-management.tmpl.njk
+++ b/src/client/app/components/chat-management/chat-management.tmpl.njk
@@ -1,14 +1,14 @@
-<div class="create-chat">
+<div class="chat-management">
     {% if canChangeName %}
         <ng-container data-componentsids="{{chatNameId}}"></ng-container>
 
-        <div class="create-chat__divider"></div>
-        <div class="create-chat__divider-hidden"></div>
+        <div class="chat-management__divider"></div>
+        <div class="chat-management__divider-hidden"></div>
     {% endif %}
 
     <ng-container data-componentsids="{{editChatUsersId}}"></ng-container>
 
-    <div class="create-chat__create-btn">
+    <div class="chat-management__create-btn">
         <ng-container data-componentsids="{{createBtnId}}"></ng-container>
     </div>
 </div>
