--- a/src/client/app/components/chat/chat.scss
+++ b/src/client/app/components/chat/chat.scss
@@ -1,28 +1,26 @@
-.chat-list {
-  &__item {
-    display: flex;
-    align-items: center;
+.chat-item {
+  display: flex;
+  align-items: center;
 
-    height: 71px;
+  height: 71px;
 
-    padding: 12px 10px;
+  padding: 12px 10px;
 
-    border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
 
-    box-sizing: border-box;
+  box-sizing: border-box;
 
-    cursor: pointer;
-  }
+  cursor: pointer;
 
-  &__item_active {
+  &_active {
     background-color: rgba(76, 76, 190, 0.15);
   }
 
-  &__item:first-of-type {
+  &:first-of-type {
     border-top: 1px solid #e5e5e5;
   }
 
-  &__item-avatar {
+  &__avatar {
     width: 47px;
     min-width: 47px;
     height: 47px;
@@ -30,19 +28,19 @@
     margin-right: 10px;
   }
 
-  &__item-text-wrapper {
+  &__text-wrapper {
     width: 100%;
     height: 100%;
   }
 
-  &__item-name {
+  &__name {
     font-weight: 600;
     font-size: 13px;
 
     color: #1e1e1e;
   }
 
-  &__item-text {
+  &__text {
     margin-top: 4px;
 
     font-weight: 500;
@@ -61,7 +59,7 @@
     box-orient: vertical;
   }
 
-  &__item-extra-info {
+  &__extra-info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -70,7 +68,7 @@
     height: 100%;
   }
 
-  &__item-date {
+  &__date {
     font-weight: 500;
     font-size: 9px;
     line-height: 13px;
