Добавлен loader для загрузки njk файлов

--- a/src/client/app/components/avatar/avatar.tmpl.njk
+++ b/src/client/app/components/avatar/avatar.tmpl.njk
@@ -6,7 +6,7 @@
     {% endif %}
 
     {% if canChangeAvatar %}
-        <button class="avatar__change-btn btn-icon" onClick="upload">
+        <button class="avatar__change-btn btn-icon" onclick="upload">
             <div class="avatar__icon">
                 {% include 'static/icons/photo.tmpl.njk' %}
             </div>
