--- a/src/client/app/pages/settings/settings.tmpl.njk
+++ b/src/client/app/pages/settings/settings.tmpl.njk
@@ -17,7 +17,7 @@
                     <ul class="settings-list">
                         {% for item in renderingSettingsList %}
                             <li class="settings-list__li">
-                                <button class="settings-list__button" data-value="{{item.value}}" onclick="showBlock(value)">
+                                <button class="settings-list__button" data-value="{{item.value}}" onClick="showBlock(value)">
                                     <div class="settings-list__icon">
                                         {% include item.iconTemplate %}
                                     </div>
