--- a/src/client/app/components/chat-management/chat-management.tmpl.njk
+++ b/src/client/app/components/chat-management/chat-management.tmpl.njk
@@ -9,6 +9,6 @@
     <ng-container data-componentsids="{{editChatUsersId}}"></ng-container>
 
     <div class="chat-management__create-btn">
-        <ng-container data-componentsids="{{createBtnId}}"></ng-container>
+        <ng-container data-componentsids="{{submitButtonId}}"></ng-container>
     </div>
 </div>
