--- a/src/client/app/pages/messenger/messenger.scss
+++ b/src/client/app/pages/messenger/messenger.scss
@@ -84,7 +84,7 @@ body {
 
     overflow-y: hidden;
 
-    background: url('../../../static/images/chat-bg.jpg');
+    background: url('../../../static/images/chat-bg-min.jpg');
   }
 
   &__chat-footer {
