Был подключён WebSocket для работы с real-time сообщениями

--- a/src/client/app/components/chat/chat.scss
+++ b/src/client/app/components/chat/chat.scss
@@ -12,6 +12,10 @@
 
   cursor: pointer;
 
+  &:hover {
+    background-color: #ece9fa;
+  }
+
   &_active {
     background-color: rgba(76, 76, 190, 0.15);
   }
