--- a/src/client/app/components/chat/chat.tmpl.njk
+++ b/src/client/app/components/chat/chat.tmpl.njk
@@ -4,7 +4,7 @@
     </div>
     <div class="chat-item__text-wrapper">
         <p class="chat-item__name">{{chat.title}}</p>
-        <p class="chat-item__text">{{chat.text}}</p>
+        <p class="chat-item__text">{{chat.lastMessage.content}}</p>
     </div>
     <div class="chat-item__extra-info">
         <span class="chat-item__date">{{chat.date}}</span>
