--- a/src/client/app/components/input/input.tmpl.njk
+++ b/src/client/app/components/input/input.tmpl.njk
@@ -9,7 +9,7 @@
         <span class="input-b__span">{{label}}</span>
 
         <div class="input-b__line">
-            <input type="{{type}}" name="{{name}}" class="input-b__input" placeholder="{{placeholder}}" formcontrol="formcontrol">
+            <input type="{{type}}" name="{{name}}" class="input-b__input" placeholder="{{placeholder}}" formcontrol>
 
             {% if iconTemplate %}
                 <div class="input-b__icon">
