--- a/src/client/app/pages/messenger/messenger.tmpl.njk
+++ b/src/client/app/pages/messenger/messenger.tmpl.njk
@@ -14,13 +14,13 @@
                 <ng-container data-componentsids="{{searchComponentId}}"></ng-container>
             </div>
         </header>
-        
+
         <ng-container data-componentsids="{{createChatBtnCopmonentId}}"></ng-container>
 
         <ng-container data-componentsids="{{chatsCopmonentId}}"></ng-container>
     </aside>
     <main class="messenger__chat">
-        {% if currectChatId %}
+        {% if selectedChat %}
             <header class="messenger__chat-header">
                 <div class="messenger__chat-header-brief-information">
                     <ng-container data-componentsids="{{briefInformationComponentId}}"></ng-container>
@@ -37,24 +37,26 @@
         {% endif %}
 
         <div class="messenger__chat-main">
-            {% if currectChatId %}
+            {% if selectedChat %}
                 <ng-container data-componentsids="{{messagesComponentId}}"></ng-container>
             {% endif %}
         </div>
 
-        {% if currectChatId %}
-            <footer class="messenger__chat-footer">
-                <button class="btn-icon messenger__chat-footer-attach-btn">
-                    {% include 'static/icons/attach.tmpl.njk' %}
-                </button>
+        {% if selectedChat %}
+            <footer>
+                <form onsubmit="send" class="messenger__chat-footer">
+                    <button class="btn-icon messenger__chat-footer-attach-btn">
+                        {% include 'static/icons/attach.tmpl.njk' %}
+                    </button>
 
-                <input type="text" class="messenger__chat-input" placeholder="Message">
+                    <input type="text" class="messenger__chat-input" placeholder="Message" formcontrol="messageInput">
 
-                <button class="btn-icon messenger__chat-footer-send-btn">
-                    <div class="badge">
-                        {% include 'static/icons/send.tmpl.njk' %}
-                    </div>
-                </button>
+                    <button type="submit" class="btn-icon messenger__chat-footer-send-btn">
+                        <div class="badge">
+                            {% include 'static/icons/send.tmpl.njk' %}
+                        </div>
+                    </button>
+                </form>
             </footer>
         {% endif %}
     </main>
