--- a/src/client/app/components/message/message.tmpl.njk
+++ b/src/client/app/components/message/message.tmpl.njk
@@ -15,7 +15,7 @@
         {% if message.time %}
             <p class="message-list__item-time">
                 <span>{{message.time}}</span>
-                {% include 'static/icons/message-has-been-read.tmpl.njk' %}
+                {# {% include 'static/icons/message-has-been-read.tmpl.njk' %} #}
             </p>
         {% endif %}
     </li>
