--- a/src/client/app/components/modal/modal.tmpl.njk
+++ b/src/client/app/components/modal/modal.tmpl.njk
@@ -1,11 +1,13 @@
-<div class="modal">
-    <div class="modal__container">
-        <button class="btn-icon modal__close-btn" onclick="close">
-            {% include 'static/icons/close.tmpl.njk' %}
-        </button>
+{% if componentId %}
+    <div class="modal">
+        <div class="modal__container">
+            <button class="btn-icon modal__close-btn" onclick="close">
+                {% include 'static/icons/close.tmpl.njk' %}
+            </button>
 
-        <ng-container data-componentsids="{{componentId}}"></ng-container>
+            <ng-container data-componentsids="{{componentId}}"></ng-container>
+        </div>
+
+        <div class="modal__overlay" onclick="close"></div>
     </div>
-
-    <div class="modal__overlay" onclick="close"></div>
-</div>
+{% endif %}
