--- a/src/client/app/pages/messenger/messenger.tmpl.njk
+++ b/src/client/app/pages/messenger/messenger.tmpl.njk
@@ -1,5 +1,5 @@
-{% if modalComponentId %}
-    <ng-container data-componentsids="{{modalComponentId}}"></ng-container>
+{% if chatManagementComponentId %}
+    <ng-container data-componentsids="{{chatManagementComponentId}}"></ng-container>
 {% endif %}
 
 <div class="messenger">
