Правки по меню чата

--- a/src/client/app/components/menu/menu.tmpl.njk
+++ b/src/client/app/components/menu/menu.tmpl.njk
@@ -1,15 +1,17 @@
-<ul class="menu">
-    {% for item in items %}
-        <li class="menu__li">
-            <button class="menu__button" data-index="{{item.index}}" onclick="click(index)">
-                {% if item.iconTemplate %}
-                    <div class="menu__icon">
-                        {% include item.iconTemplate %}
-                    </div>
-                {% endif %}
+{% if mappedItems.length %}
+    <ul class="menu">
+        {% for item in mappedItems %}
+            <li class="menu__li">
+                <button class="menu__button" data-index="{{item.index}}" onclick="click(index)">
+                    {% if item.iconTemplate %}
+                        <div class="menu__icon">
+                            {% include item.iconTemplate %}
+                        </div>
+                    {% endif %}
 
-                <span class="menu__span">{{item.title}}</span>
-            </button>
-        </li>
-    {% endfor %}
-</ul>
+                    <span class="menu__span">{{item.title}}</span>
+                </button>
+            </li>
+        {% endfor %}
+    </ul>
+{% endif %}
