Правки по стилям

--- a/src/client/app/pages/error-404/error-404.tmpl.njk
+++ b/src/client/app/pages/error-404/error-404.tmpl.njk
@@ -1,6 +1,6 @@
 <main class="container container_center">
-    <div class="error noselect">
-        <p class="error__code">404</p>
-        <p class="error__description">NOT FOUND</p>
+    <div class="error-page noselect">
+        <p class="error-page__code">404</p>
+        <p class="error-page__description">NOT FOUND</p>
     </div>
 </main>
