--- a/src/client/app/pages/error-500/error-500.tmpl.njk
+++ b/src/client/app/pages/error-500/error-500.tmpl.njk
@@ -1,7 +1,7 @@
 <main id="root" class="container container_center">
-    <div class="error noselect">
-        <p class="error__code">500</p>
-        <p class="error__description">SORRY...</p>
-        <p class="error__description">INTERNAL SERVER ERROR</p>
+    <div class="error-page noselect">
+        <p class="error-page__code">500</p>
+        <p class="error-page__description">SORRY...</p>
+        <p class="error-page__description">INTERNAL SERVER ERROR</p>
     </div>
 </main>
